--- a/9.1/Dockerfile
+++ b/9.1/Dockerfile
@@ -6,7 +6,6 @@ RUN groupadd -r sentry && useradd -r -m -g sentry sentry
 RUN apt-get update && apt-get install -y --no-install-recommends \
         gcc \
         git \
-        zlib1g \
         libffi-dev \
         libjpeg-dev \
         libpq-dev \
@@ -15,6 +14,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         libxslt-dev \
         libyaml-dev \
         pkg-config \
+        zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Sane defaults for pip
